@@ -1,5 +1,6 @@
 [R5.1.0]
 SyncProxyTester:
++ When the v1 protocol is active, the user can only send a command supported by version 1.
 + Add the possibility to set the parameters of SetGlobalProperties and ResetGlobalProperties commands with GUI.
 * Fix a rare crash when creating a command after resuming the app.
 * Fix sending CreateChoiceSet command by adding image values.
